--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -9,9 +9,9 @@
 
 <% @locations.each do |location| %>
   <tr>
-    <td><%= @location.name %></td>
-    <td><%= @location.address %></td>
-    <td><%= @location.phone %></td>
+    <td><%= location.name %></td>
+    <td><%= location.address %></td>
+    <td><%= location.phone %></td>
   </tr>
 <% end %>
 </table>
