--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,6 +3,6 @@
 <% @events.each do |event| %>
 	<div class="event_listing">
 		<%= event.title %><br/>
-		<%= ActionView::Base.full_sanitizer.sanitize(event.summary) %>
+		<%= event.summary.html_safe %>
 	</div>
 <% end %>
