--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,19 @@
-This is the Detroit Public Library Mobile App
+<div class="col" id="col1">
+	<div id="home_events">
+		Events
+	</div>
+
+	<div id="home_news">
+		News
+	</div>
+</div>
+
+<div class="col" id="col2">
+	<div id="home_books">
+		Popular Books
+	</div>
+
+	<div id="home_services">
+		Services
+	</div>
+</div>
