--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,22 @@
  *= require_tree .
  */
 
+#wrapper {
+	100%
+}
+
+.col {
+	float: left;
+}
+
+.col#col1 {
+	width: 600px;
+}
+
+.col#col2 {
+	width: 300px;
+}
+
 .event_listing {
 	margin-bottom: 20px;
 	border-bottom: 1px solid #ccc;
