--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   </head>
 
   <body>
-
-    <%= yield %>
+	<div id="wrapper">
+    	<%= yield %>
+	</div>
     <%= javascript_include_tag "application" %>
   </body>
 </html>
