--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,40 @@
-<div class="col" id="col1">
-	<div id="home_events">
-		Events
-	</div>
+<div class="row" id="search_row">
+	<div class="large-2 columns">logo</div>
+	<div class="large-4 columns">blank</div>
+	<div class="large-4 columns">search</div>
+	<div class="large-2 columns">social</div>
+</div>
 
-	<div id="home_news">
-		News
+<div class="row">
+	<div class="large-12 columns">
+		Header Image Row
 	</div>
 </div>
 
-<div class="col" id="col2">
-	<div id="home_books">
-		Popular Books
+<div class="row">
+	<div class="large-8 columns">
+		Announcement
+	</div>
+</div>
+
+<div class="row">
+	<div class="large-8 columns">
+		<div id="home_events">
+			Events
+		</div>
+
+		<div id="home_news">
+			News
+		</div>
 	</div>
 
-	<div id="home_services">
-		Services
+	<div class="large-4 columns">
+		<div id="home_books">
+			Popular Books
+		</div>
+
+		<div id="home_services">
+			Services
+		</div>
 	</div>
 </div>
