--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row">
-	<div class="large-8 columns">
+	<div class="large-8 large-centered columns">
 		Announcement
 	</div>
 </div>
