--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,24 +1,24 @@
 <div class="row" id="search_row">
-	<div class="large-2 columns">logo</div>
-	<div class="large-4 columns">blank</div>
-	<div class="large-4 columns">search</div>
-	<div class="large-2 columns">social</div>
+	<div class="medium-2 columns">logo</div>
+	<div class="medium-4 columns">blank</div>
+	<div class="medium-4 columns">search</div>
+	<div class="medium-2 columns">social</div>
 </div>
 
 <div class="row">
-	<div class="large-12 columns">
+	<div class="medium-12 columns">
 		Header Image Row
 	</div>
 </div>
 
 <div class="row">
-	<div class="large-8 large-centered columns">
+	<div class="medium-8 medium-centered columns">
 		Announcement
 	</div>
 </div>
 
 <div class="row">
-	<div class="large-8 columns">
+	<div class="medium-8 columns">
 		<div id="home_events">
 			Events
 		</div>
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 
-	<div class="large-4 columns">
+	<div class="medium-4 columns">
 		<div id="home_books">
 			Popular Books
 		</div>
