--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,11 +20,21 @@
 <div class="row">
 	<div class="medium-8 columns">
 		<div id="home_events">
-			Events
+			<ul>
+				<li>Event 1</li>
+				<li>Event 2</li>
+				<li>Event 3</li>
+				<li>Event 4</li>
+			</ul>
 		</div>
 
 		<div id="home_news">
-			News
+			<ul>
+				<li>News 1</li>
+				<li>News 2</li>
+				<li>News 3</li>
+				<li>News 4</li>
+			</ul>
 		</div>
 	</div>
 
