--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,10 +21,38 @@
 	<div class="medium-8 columns">
 		<div id="home_events">
 			<ul>
-				<li>Event 1</li>
-				<li>Event 2</li>
-				<li>Event 3</li>
-				<li>Event 4</li>
+				<li>
+					<div class="event_title">Introduction to Word</div>
+					<div class="event_body">
+						Saturday, July 12 2014 - 1030am<br/>
+						Learn how to use Word like an Adult<br/>
+						Adults
+					</div>
+				</li>
+				<li>
+					<div class="event_title">Introduction to Word</div>
+					<div class="event_body">
+						Saturday, July 12 2014 - 1030am<br/>
+						Learn how to use Word like an Adult<br/>
+						Adults
+					</div>
+				</li>
+				<li>
+					<div class="event_title">Introduction to Word</div>
+					<div class="event_body">
+						Saturday, July 12 2014 - 1030am<br/>
+						Learn how to use Word like an Adult<br/>
+						Adults
+					</div>
+				</li>
+				<li>
+					<div class="event_title">Introduction to Word</div>
+					<div class="event_body">
+						Saturday, July 12 2014 - 1030am<br/>
+						Learn how to use Word like an Adult<br/>
+						Adults
+					</div>
+				</li>			
 			</ul>
 		</div>
 
