--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,10 +58,34 @@
 
 		<div id="home_news">
 			<ul>
-				<li>News 1</li>
-				<li>News 2</li>
-				<li>News 3</li>
-				<li>News 4</li>
+				<li>
+					<div class="news_title">News Title</div>
+					<div class="news_body">
+						News body 1<br/>
+						news body 2					
+					</div>
+				</li>
+				<li>
+					<div class="news_title">News Title</div>
+					<div class="news_body">
+						News body 1<br/>
+						news body 2					
+					</div>
+				</li>
+				<li>
+					<div class="news_title">News Title</div>
+					<div class="news_body">
+						News body 1<br/>
+						news body 2					
+					</div>
+				</li>
+				<li>
+					<div class="news_title">News Title</div>
+					<div class="news_body">
+						News body 1<br/>
+						news body 2					
+					</div>
+				</li>			
 			</ul>
 		</div>
 	</div>
