--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@
 	font-size: 12pt;
 }
 
-#home_events ul {
+#home_events ul, #home_news ul {
 	list-style-type: none;
 	margin: 0px;
 	padding: 0px;
