--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,21 +5,21 @@
 	<div class="medium-2 columns">social</div>
 </div>
 
-<div class="row">
+<div class="row" id="header_row">
 	<div class="medium-12 columns">
 		Header Image Row
 	</div>
 </div>
 
-<div class="row">
+<div class="row" id="announcement_row">
 	<div class="medium-8 medium-centered columns">
 		Announcement
 	</div>
 </div>
 
-<div class="row">
+<div class="row" id="content_row">
 	<div class="medium-8 columns">
-		<div id="home_events">
+		<div class="home_section" id="home_events">
 			<ul>
 				<li>
 					<div class="event_title">Introduction to Word</div>
@@ -56,7 +56,7 @@
 			</ul>
 		</div>
 
-		<div id="home_news">
+		<div class="home_section" id="home_news">
 			<ul>
 				<li>
 					<div class="news_title">News Title</div>
