--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -91,11 +91,11 @@
 	</div>
 
 	<div class="medium-4 columns">
-		<div id="home_books">
+		<div class="home_section" id="home_books">
 			Popular Books
 		</div>
 
-		<div id="home_services">
+		<div class="home_section" id="home_services">
 			Services
 		</div>
 	</div>
