--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,10 +55,19 @@ body {
 .home_section {
 	background-color: white;
 	margin-bottom: 15px;
+	padding: 5px;
 }
 
 #home_events ul, #home_news ul {
 	list-style-type: none;
 	margin: 0px;
 	padding: 0px;
+}
+
+.popular_book {
+	float: left;
+	width: 60px;
+	height: 120px;
+	background-color: #ccc;
+	margin: 5px;
 }
