--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,92 +11,97 @@
 	</div>
 </div>
 
-<div class="row" id="announcement_row">
-	<div class="medium-8 medium-centered columns">
-		Announcement
-	</div>
-</div>
-
-<div class="row" id="content_row">
-	<div class="medium-8 columns">
-		<div class="home_section" id="home_events">
-			<ul>
-				<li>
-					<div class="event_title">Introduction to Word</div>
-					<div class="event_body">
-						Saturday, July 12 2014 - 1030am<br/>
-						Learn how to use Word like an Adult<br/>
-						Adults
-					</div>
-				</li>
-				<li>
-					<div class="event_title">Introduction to Word</div>
-					<div class="event_body">
-						Saturday, July 12 2014 - 1030am<br/>
-						Learn how to use Word like an Adult<br/>
-						Adults
-					</div>
-				</li>
-				<li>
-					<div class="event_title">Introduction to Word</div>
-					<div class="event_body">
-						Saturday, July 12 2014 - 1030am<br/>
-						Learn how to use Word like an Adult<br/>
-						Adults
-					</div>
-				</li>
-				<li>
-					<div class="event_title">Introduction to Word</div>
-					<div class="event_body">
-						Saturday, July 12 2014 - 1030am<br/>
-						Learn how to use Word like an Adult<br/>
-						Adults
-					</div>
-				</li>			
-			</ul>
-		</div>
-
-		<div class="home_section" id="home_news">
-			<ul>
-				<li>
-					<div class="news_title">News Title</div>
-					<div class="news_body">
-						News body 1<br/>
-						news body 2					
-					</div>
-				</li>
-				<li>
-					<div class="news_title">News Title</div>
-					<div class="news_body">
-						News body 1<br/>
-						news body 2					
-					</div>
-				</li>
-				<li>
-					<div class="news_title">News Title</div>
-					<div class="news_body">
-						News body 1<br/>
-						news body 2					
-					</div>
-				</li>
-				<li>
-					<div class="news_title">News Title</div>
-					<div class="news_body">
-						News body 1<br/>
-						news body 2					
-					</div>
-				</li>			
-			</ul>
+<div id="main_content">
+	<div class="row" id="announcement_row">
+		<div class="medium-8 medium-centered columns">
+			Announcement
 		</div>
 	</div>
 
-	<div class="medium-4 columns">
-		<div class="home_section" id="home_books">
-			Popular Books
+	<div class="row" id="content_row">
+		<div class="medium-8 columns">
+			<div class="home_section" id="home_events">
+				<ul>
+					<li>
+						<div class="event_title">Introduction to Word</div>
+						<div class="event_body">
+							Saturday, July 12 2014 - 1030am<br/>
+							Learn how to use Word like an Adult<br/>
+							Adults
+						</div>
+					</li>
+					<li>
+						<div class="event_title">Introduction to Word</div>
+						<div class="event_body">
+							Saturday, July 12 2014 - 1030am<br/>
+							Learn how to use Word like an Adult<br/>
+							Adults
+						</div>
+					</li>
+					<li>
+						<div class="event_title">Introduction to Word</div>
+						<div class="event_body">
+							Saturday, July 12 2014 - 1030am<br/>
+							Learn how to use Word like an Adult<br/>
+							Adults
+						</div>
+					</li>
+					<li>
+						<div class="event_title">Introduction to Word</div>
+						<div class="event_body">
+							Saturday, July 12 2014 - 1030am<br/>
+							Learn how to use Word like an Adult<br/>
+							Adults
+						</div>
+					</li>			
+				</ul>
+			</div>
+
+			<div class="home_section" id="home_news">
+				<ul>
+					<li>
+						<div class="news_title">News Title</div>
+						<div class="news_body">
+							News body 1<br/>
+							news body 2					
+						</div>
+					</li>
+					<li>
+						<div class="news_title">News Title</div>
+						<div class="news_body">
+							News body 1<br/>
+							news body 2					
+						</div>
+					</li>
+					<li>
+						<div class="news_title">News Title</div>
+						<div class="news_body">
+							News body 1<br/>
+							news body 2					
+						</div>
+					</li>
+					<li>
+						<div class="news_title">News Title</div>
+						<div class="news_body">
+							News body 1<br/>
+							news body 2					
+						</div>
+					</li>			
+				</ul>
+			</div>
 		</div>
 
-		<div class="home_section" id="home_services">
-			Services
+		<div class="medium-4 columns">
+			<div class="home_section" id="home_books">
+				<div class="popular_book"></div>
+				<div class="popular_book"></div>
+				<div class="popular_book"></div>
+				<div style="clear:both;"></div>
+			</div>
+
+			<div class="home_section" id="home_services">
+				Services
+			</div>
 		</div>
 	</div>
 </div>
