--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -100,7 +100,32 @@
 			</div>
 
 			<div class="home_section" id="home_services">
-				Services
+				<ul>
+					<li>
+						<div class="service_title">Service Title</div>
+						<div class="service_body">
+							Service description
+						</div>
+					</li>
+					<li>
+						<div class="service_title">Service Title</div>
+						<div class="service_body">
+							Service description
+						</div>
+					</li>
+					<li>
+						<div class="service_title">Service Title</div>
+						<div class="service_body">
+							Service description
+						</div>
+					</li>
+					<li>
+						<div class="service_title">Service Title</div>
+						<div class="service_body">
+							Service description
+						</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
