--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,6 +56,11 @@ body {
 	background-color: white;
 }
 
+#header_row {
+	height: 160px;
+	background-color: #ccc;
+}
+
 .home_section {
 	background-color: white;
 	margin-bottom: 15px;
