--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
 <div id="main_content">
 	<div class="row" id="announcement_row">
 		<div class="medium-8 medium-centered columns">
-			Announcement
+			Douglass and Redford branches are temporary closed for renovations.
 		</div>
 	</div>
 
