--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="search_row">
 	<div class="medium-2 columns"><%= image_tag 'dpl_logo.png' %></div>
-	<div class="medium-4 columns">blank</div>
+	<div class="medium-4 columns">&nbsp;</div>
 	<div class="medium-4 columns">search</div>
 	<div class="medium-2 columns" id="social_icons">
 		<a href="#" class="fc-webicon facebook small">Like us on Facebook</a>
