the announcements row has radii and is dismissable

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,9 +14,10 @@
 </div>
 
 <div id="main_content">
-	<div class="row" id="announcement_row">
+	<div data-alert class="alert-box info radius row" id="announcement_row">
 		<div class="medium-8 medium-centered columns">
 			Douglass and Redford branches are temporary closed for renovations.
+			<a href="#" class="close">&times;</a>
 		</div>
 	</div>
 
