Adding title for closest branch

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,8 +14,8 @@
 </div>
 
 <div id="main_content">
-	<div data-alert class="alert-box info radius row" id="announcement_row">
-		<div class="medium-8 medium-centered columns">
+	<div class="row" id="announcement_row">
+		<div data-alert class="alert-box info radius medium-8 medium-centered columns">
 			Douglass and Redford branches are temporary closed for renovations.
 			<a href="#" class="close">&times;</a>
 		</div>
@@ -23,6 +23,7 @@
 
 	<div class="row" id="content_row">
 		<div class="medium-8 columns">
+			<h5 id="eventsTitle">Upcoming Events For Your Closest Branch</h5>
 			<div class="home_section" id="home_events">
 				<ul>
 					<li>
