--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,6 +23,7 @@
 	<div class="row" id="content_row">
 		<div class="medium-8 columns">
 			<div class="home_section" id="home_events">
+				<div class="section_title" id="events_title">Events Title</div>
 				<ul>
 					<li>
 						<div class="event_title">Introduction to Word</div>
@@ -60,6 +61,7 @@
 			</div>
 
 			<div class="home_section" id="home_news">
+				<div class="section_title" id="news_title">Events Title</div>
 				<ul>
 					<li>
 						<div class="news_title">News Title</div>
@@ -95,6 +97,7 @@
 
 		<div class="medium-4 columns">
 			<div class="home_section" id="home_books">
+				<div class="section_title" id="books_title">Books Title</div>
 				<div class="popular_book"></div>
 				<div class="popular_book"></div>
 				<div class="popular_book"></div>
@@ -102,6 +105,7 @@
 			</div>
 
 			<div class="home_section" id="home_services">
+				<div class="section_title" id="services_title">Services Title</div>
 				<ul>
 					<li>
 						<div class="service_title">Service Title</div>
