--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,9 +23,8 @@
 
 	<div class="row" id="content_row">
 		<div class="medium-8 columns">
-			<h5 id="eventsTitle">Upcoming Events For Your Closest Branch</h5>
 			<div class="home_section" id="home_events">
-				<div class="section_title" id="events_title">Events Title</div>
+				<div class="section_title" id="events_title">Upcoming Events For Your Closest Branch</div>
 				<ul>
 					<li>
 						<div class="event_title">Introduction to Word</div>
