--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,6 +25,8 @@
 		<div class="medium-8 columns">
 			<h5 id="eventsTitle">Upcoming Events For Your Closest Branch</h5>
 			<div class="home_section" id="home_events">
+				<div class="left_title">&nbsp;</div>
+				<div class="right_title">&nbsp;</div>
 				<div class="section_title" id="events_title">Events Title</div>
 				<ul>
 					<li>
@@ -63,6 +65,8 @@
 			</div>
 
 			<div class="home_section" id="home_news">
+				<div class="left_title">&nbsp;</div>
+				<div class="right_title">&nbsp;</div>
 				<div class="section_title" id="news_title">Events Title</div>
 				<ul>
 					<li>
@@ -99,6 +103,8 @@
 
 		<div class="medium-4 columns">
 			<div class="home_section" id="home_books">
+				<div class="left_title">&nbsp;</div>
+				<div class="right_title">&nbsp;</div>
 				<div class="section_title" id="books_title">Books Title</div>
 				<div class="popular_book"></div>
 				<div class="popular_book"></div>
@@ -107,6 +113,8 @@
 			</div>
 
 			<div class="home_section" id="home_services">
+				<div class="left_title">&nbsp;</div>
+				<div class="right_title">&nbsp;</div>
 				<div class="section_title" id="services_title">Services Title</div>
 				<ul>
 					<li>
