adding slider with one image

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,26 @@
 
 <div class="row" id="header_row">
 	<div class="medium-12 columns">
-		Header Image Row
+		<ul class="example-orbit" data-orbit>
+		  <li>
+		    <img src="http://www.detroit.lib.mi.us/sites/default/files/imagecache/home-slide/home-slides/na006875rev1.jpg" alt="National Automotive History Collection" />
+		    <div class="orbit-caption">
+		      National Automotive History Collection
+		    </div>
+		  </li>
+		  <li class="active">
+		    <img src="../assets/img/examples/andromeda-orbit.jpg" alt="slide 2" />
+		    <div class="orbit-caption">
+		      Caption Two.
+		    </div>
+		  </li>
+		  <li>
+		    <img src="../assets/img/examples/launch-orbit.jpg" alt="slide 3" />
+		    <div class="orbit-caption">
+		      Caption Three.
+		    </div>
+		  </li>
+		</ul>
 	</div>
 </div>
 
