dropping more content into the slider

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,15 +17,27 @@
 		    </div>
 		  </li>
 		  <li class="active">
-		    <img src="../assets/img/examples/andromeda-orbit.jpg" alt="slide 2" />
+		    <img src="http://www.detroit.lib.mi.us/sites/default/files/imagecache/home-slide/home-slides/hackley%20series%20web%20banner.jpg" alt="Hackley After Dark" />
 		    <div class="orbit-caption">
-		      Caption Two.
+		      Hackley After Dark
 		    </div>
 		  </li>
 		  <li>
-		    <img src="../assets/img/examples/launch-orbit.jpg" alt="slide 3" />
+		    <img src="http://www.detroit.lib.mi.us/sites/default/files/imagecache/home-slide/home-slides/miliagebanner3.jpg" alt="Millage" />
 		    <div class="orbit-caption">
-		      Caption Three.
+		      Millage
+		    </div>
+		  </li>
+		  <li>
+		    <img src="http://www.detroit.lib.mi.us/sites/default/files/imagecache/home-slide/home-slides/java%20and%20jazz%20webimage%20copy.jpg" alt="2014 Comerica Java and Jazz" />
+		    <div class="orbit-caption">
+		      2014 Comerica Java and Jazz
+		    </div>
+		  </li>
+		  <li>
+		    <img src="http://www.detroit.lib.mi.us/sites/default/files/imagecache/home-slide/home-slides/summerreadingbanner22.jpg" alt="Join the Summer Reading Challenge" />
+		    <div class="orbit-caption">
+		      Join the Summer Reading Challenge
 		    </div>
 		  </li>
 		</ul>
