--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -148,27 +148,27 @@
 			<div class="home_section" id="home_services">
 				<ul>
 					<li>
-						<div class="service_title">Service Title</div>
+						<div class="service_title">Hype Teen Center</div>
 						<div class="service_body">
-							Service description
+							Welcome to HYPE, the Detroit Public Library's Teen Center.
 						</div>
 					</li>
 					<li>
-						<div class="service_title">Service Title</div>
+						<div class="service_title">Ask A Librarian</div>
 						<div class="service_body">
-							Service description
+							Brief, factual answers to your reference questions via e-mail, chat or by phone.
 						</div>
 					</li>
 					<li>
-						<div class="service_title">Service Title</div>
+						<div class="service_title">Detroit Reads!</div>
 						<div class="service_body">
-							Service description
+							Learn to read or improve your reading skills.
 						</div>
 					</li>
 					<li>
-						<div class="service_title">Service Title</div>
+						<div class="service_title">Career and Employment Assistance</div>
 						<div class="service_body">
-							Service description
+							Resources for making career decisions, strategizing your job search, and finding job listings at the Main Library.
 						</div>
 					</li>
 				</ul>
