--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_tree .
  */
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -79,3 +80,4 @@ li:last-child {
 	color: #8cc63f;
 	font-size: 1.4rem;
 	padding: 8px;
+}
