--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,9 @@
 	<div class="medium-4 columns">&nbsp;</div>
 	<div class="medium-4 columns">search</div>
 	<div class="medium-2 columns" id="social_icons">
-		<a href="#" class="fc-webicon facebook small">Like us on Facebook</a>
+		<a href="#"><%= image_tag 'webicons/webicon-facebook-m.png' %></a>
+		<a href="#"><%= image_tag 'webicons/webicon-twitter-m.png' %></a>
+		<a href="#"><%= image_tag 'webicons/webicon-youtube-m.png' %></a>
 	</div>
 </div>
 
