--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
 <div class="row" id="search_row">
 	<div class="medium-2 columns"><%= image_tag 'dpl_logo.png' %></div>
 	<div class="medium-4 columns">&nbsp;</div>
-	<div class="medium-4 columns">search</div>
+	<div class="medium-4 columns">
+		<input type="text" id="search_input" />
+	</div>
 	<div class="medium-2 columns" id="social_icons">
 		<a href="#"><%= image_tag 'webicons/webicon-facebook-m.png' %></a>
 		<a href="#"><%= image_tag 'webicons/webicon-twitter-m.png' %></a>
@@ -64,33 +66,32 @@
 					<li>
 						<div class="event_title">Introduction to Word</div>
 						<div class="event_body">
-							Saturday, July 12 2014 - 1030am<br/>
+							Saturday, July 12 2014 - 10:30am<br/>
 							Learn how to use Word like an Adult<br/>
 							Adults
 						</div>
 					</li>
 					<li>
-						<div class="event_title">Introduction to Word</div>
+						<div class="event_title">Creating Tables in Word</div>
 						<div class="event_body">
-							Saturday, July 12 2014 - 1030am<br/>
-							Learn how to use Word like an Adult<br/>
+							Saturday, July 12 2014 - 3:00pm<br/>
+							Learn how to use the tables feature in Word like an Adult<br/>
 							Adults
 						</div>
 					</li>
 					<li>
-						<div class="event_title">Introduction to Word</div>
+						<div class="event_title">Summer Reading Program</div>
 						<div class="event_body">
-							Saturday, July 12 2014 - 1030am<br/>
-							Learn how to use Word like an Adult<br/>
-							Adults
+							Monday, July 14 2014 - 1:00pm<br/>
+							Fizz, Boom, Wow, Come on and join in the summer fun as we read, do science experiments, and arts and..<br/>
+							Pre-K - 11 years of age
 						</div>
 					</li>
 					<li>
-						<div class="event_title">Introduction to Word</div>
+						<div class="event_title">Don't Bug Me</div>
 						<div class="event_body">
-							Saturday, July 12 2014 - 1030am<br/>
-							Learn how to use Word like an Adult<br/>
-							Adults
+							Saturday, July 12 2014 - 1:00pm<br/>
+							Come and learn the science of creepy crawly insects and have fun doing it.
 						</div>
 					</li>
 				</ul>
@@ -102,31 +103,30 @@
 			<div class="home_section" id="home_news">
 				<ul>
 					<li>
-						<div class="news_title">News Title</div>
+						<div class="news_title">Nominate Your Favorite Author for Authors @DPL</div>
+						<div class="news_body">
+							Read some good books lately?<br/>
+							Want to meet your favorite author...
+						</div>
+					</li>
+					<li>
+						<div class="news_title">2014 Summer Reading</div>
+						<div class="news_body">
+							Join the 2014 summer reading programs.<br/>
+							Fizz Boom Read and Spark A
+						</div>
+					</li>
+					<li>
+						<div class="news_title">2014 Park and Read Program Field Trips</div>
 						<div class="news_body">
 							News body 1<br/>
 							news body 2
 						</div>
 					</li>
 					<li>
-						<div class="news_title">News Title</div>
+						<div class="news_title">Discover the Wonders of the Detroit Public Library: An Art and Architectural Tour</div>
 						<div class="news_body">
-							News body 1<br/>
-							news body 2
-						</div>
-					</li>
-					<li>
-						<div class="news_title">News Title</div>
-						<div class="news_body">
-							News body 1<br/>
-							news body 2
-						</div>
-					</li>
-					<li>
-						<div class="news_title">News Title</div>
-						<div class="news_body">
-							News body 1<br/>
-							news body 2
+							The DPL Friends Foundation presents docent led tours highlighting the art.
 						</div>
 					</li>
 				</ul>
