--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,9 +82,9 @@ li:last-child {
 
 #home_events .event_title, #home_news .news_title, #home_services .service_title {
 	color: #8cc63f;
-	font-size: 1.4rem;
+	font-size: 1.4em;
 	padding: 8px;
 }
 alert-box {
-	margin: 0.40rem;
+	margin: 0.40em;
 }
