Add URL's to buttons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,9 @@
 		<input type="text" id="search_input" />
 	</div>
 	<div class="medium-2 columns" id="social_icons">
-		<a href="#"><%= image_tag 'webicons/webicon-facebook-m.png' %></a>
-		<a href="#"><%= image_tag 'webicons/webicon-twitter-m.png' %></a>
-		<a href="#"><%= image_tag 'webicons/webicon-youtube-m.png' %></a>
+		<a href="https://twitter.com/detroitlibrary"><%= image_tag 'webicons/webicon-facebook-m.png' %></a>
+		<a href="https://www.facebook.com/detroitpubliclibrary"><%= image_tag 'webicons/webicon-twitter-m.png' %></a>
+		<a href="https://www.youtube.com/user/detroitpubliclibrary"><%= image_tag 'webicons/webicon-youtube-m.png' %></a>
 	</div>
 </div>
 
