--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,7 @@
 		<div class="medium-8 columns">
 			<div class="left_title">&nbsp;</div>
 			<div class="right_title">&nbsp;</div>
-			<div class="section_title" id="events_title">Upcoming Events For Your Closest Branch</div>
+			<div class="section_title" id="events_title">UPCOMING EVENTS</div>
 			<div class="home_section" id="home_events">
 				<ul>
 					<li>
@@ -99,7 +99,7 @@
 
 			<div class="left_title">&nbsp;</div>
 			<div class="right_title">&nbsp;</div>
-			<div class="section_title" id="news_title">Events Title</div>
+			<div class="section_title" id="news_title">NEWS & HIGHLIGHTS</div>
 			<div class="home_section" id="home_news">
 				<ul>
 					<li>
