--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -136,7 +136,7 @@
 		<div class="medium-4 columns">
 			<div class="left_title">&nbsp;</div>
 			<div class="right_title">&nbsp;</div>
-			<div class="section_title" id="books_title">Books Title</div>
+			<div class="section_title" id="books_title">POPULAR BOOKS</div>
 			<div class="home_section" id="home_books">
 				<div class="popular_book"></div>
 				<div class="popular_book"></div>
@@ -146,7 +146,7 @@
 
 			<div class="left_title">&nbsp;</div>
 			<div class="right_title">&nbsp;</div>
-			<div class="section_title" id="services_title">Services Title</div>
+			<div class="section_title" id="services_title">SERVICES</div>
 			<div class="home_section" id="home_services">
 				<ul>
 					<li>
