--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,6 +45,7 @@ body {
 	-moz-box-shadow: 0px 3px 5px 0px rgba(69,69,69,0.2);
 	box-shadow: 0px 3px 5px 0px rgba(69,69,69,0.2);
 }
+
 li {
 	border-bottom: gray solid 1px;
 	padding: 8px;
@@ -57,6 +58,7 @@ li {
 li:last-child {
 	border-bottom: none;
 }
+
 .left_title {
 	float: left;
 	background: url('/assets/banner-left.png');
@@ -70,12 +72,14 @@ li:last-child {
 	width: 16px;
 	height: 59px;
 }
+
 .section_title {
 	background-color: #8cc63f;
 	color: white;
 	margin: 0px 14px;
 	padding: 1px 8px;
 }
+
 .event_body, .news_body, .service_body {
 	padding: 9px;
 }
@@ -86,6 +90,17 @@ li:last-child {
 	padding: 8px;
 	padding-bottom: 0px;
 }
+
 alert-box {
 	margin: 0.40em;
+}
+
+#home_books {
+	padding-left: 8px;
+}
+
+.popular_book {
+	float: left;
+	width: 85px;
+	padding: 9px;
 }
