--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -138,9 +138,9 @@
 			<div class="right_title">&nbsp;</div>
 			<div class="section_title" id="books_title">POPULAR BOOKS</div>
 			<div class="home_section" id="home_books">
-				<div class="popular_book"></div>
-				<div class="popular_book"></div>
-				<div class="popular_book"></div>
+				<div class="popular_book"><%= image_tag 'book1.jpg' %></div>
+				<div class="popular_book"><%= image_tag 'book2.jpg' %></div>
+				<div class="popular_book"><%= image_tag 'book3.jpg' %></div>
 				<div style="clear:both;"></div>
 			</div>
 
