--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,37 +83,7 @@
 				<div style="clear:both;"></div>
 			</div>
 
-			<div class="left_title">&nbsp;</div>
-			<div class="right_title">&nbsp;</div>
-			<div class="section_title" id="services_title">SERVICES</div>
-			<div class="home_section" id="home_services">
-				<ul>
-					<li>
-						<div class="service_title">Hype Teen Center</div>
-						<div class="service_body">
-							Welcome to HYPE, the Detroit Public Library's Teen Center.
-						</div>
-					</li>
-					<li>
-						<div class="service_title">Ask A Librarian</div>
-						<div class="service_body">
-							Brief, factual answers to your reference questions via e-mail, chat or by phone.
-						</div>
-					</li>
-					<li>
-						<div class="service_title">Detroit Reads!</div>
-						<div class="service_body">
-							Learn to read or improve your reading skills.
-						</div>
-					</li>
-					<li>
-						<div class="service_title">Career and Employment Assistance</div>
-						<div class="service_body">
-							Resources for making career decisions, strategizing your job search, and finding job listings at the Main Library.
-						</div>
-					</li>
-				</ul>
-			</div>
+			<%= render :partial=>'services' %>
 		</div>
 	</div>
 </div>
