--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -148,28 +148,36 @@
 			<div class="home_section" id="home_services">
 				<ul>
 					<li>
-						<div class="service_title">Hype Teen Center</div>
-						<div class="service_body">
-							Welcome to HYPE, the Detroit Public Library's Teen Center.
-						</div>
+						<a href="/services/3">
+							<div class="service_title">Hype Teen Center</div>
+							<div class="service_body">
+								Welcome to HYPE, the Detroit Public Library's Teen Center.
+							</div>
+						</a>
 					</li>
 					<li>
-						<div class="service_title">Ask A Librarian</div>
-						<div class="service_body">
-							Brief, factual answers to your reference questions via e-mail, chat or by phone.
-						</div>
+						<a href="/services/4">
+							<div class="service_title">Ask A Librarian</div>
+							<div class="service_body">
+								Brief, factual answers to your reference questions via e-mail, chat or by phone.
+							</div>
+						</a>
 					</li>
 					<li>
-						<div class="service_title">Detroit Reads!</div>
-						<div class="service_body">
-							Learn to read or improve your reading skills.
-						</div>
+						<a href="/services/5">
+							<div class="service_title">Detroit Reads!</div>
+							<div class="service_body">
+								Learn to read or improve your reading skills.
+							</div>
+						</a>
 					</li>
 					<li>
-						<div class="service_title">Career and Employment Assistance</div>
-						<div class="service_body">
-							Resources for making career decisions, strategizing your job search, and finding job listings at the Main Library.
-						</div>
+						<a href="/services/6">
+							<div class="service_title">Career and Employment Assistance</div>
+							<div class="service_body">
+								Resources for making career decisions, strategizing your job search, and finding job listings at the Main Library.
+							</div>
+						</a>
 					</li>
 				</ul>
 			</div>
