--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,10 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
+.group-about-branch, .location-locations-header, .location-locations-wrapper, .field-field-map, .group-general-information {
+	display: none;
+}
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	color: #363636;
