--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,12 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
-.group-about-branch, .location-locations-header, .location-locations-wrapper, .field-field-map, .group-general-information {
+.group-about-branch, .location-locations-header, .location-locations-wrapper, .field-field-map, .group-general-information, .group-special-services, .group-transportation, .group-self-check, .group-computer-equipment {
 	display: none;
+}
+
+.node-type-branch .node-title {
+	font-size: 12pt;
 }
 
 body {
