--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,8 +25,10 @@
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
 	color: #363636;
+	font-family: 'Open Sans', helvetica, sans-serif;
+	font-size: 13px;
+	line-height: 18px;
 }
 
 #search_row {
@@ -99,7 +101,7 @@ li:last-child {
 	padding-bottom: 0px;
 }
 
-alert-box {
+.alert-box {
 	margin: 0.40em;
 }
 
