--- a/app/views/home/_upcoming_events.html.erb
+++ b/app/views/home/_upcoming_events.html.erb
@@ -2,6 +2,15 @@
 <div class="right_title">&nbsp;</div>
 <div class="section_title" id="events_title">UPCOMING EVENTS</div>
 <div class="home_section" id="home_events">
+	<div class="geolocation_banner row">
+		<div class="nearest_branch_info medium-10 columns">
+			<div class="branch_prompt">Zombies are invading:</div>
+			<div class="nearest_branch_name" id="nearest_branch_name"></div>
+			<div id="nearest_branch_hours"></div>
+			<div id="nearest_branch_phone"></div>
+		</div>
+		<div class="geolocation_icon medium-2 columns"></div>
+	</div>
 	<ul>
 		<li>
 			<div class="event_title">Introduction to Word</div>
