--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,8 +25,8 @@
 }
 
 body {
-	color: #363636;
-	font-family: 'Open Sans', helvetica, sans-serif;
+	color: #363636 !important;
+	font-family: 'Open Sans', helvetica, sans-serif !important;
 	font-size: 13px;
 	line-height: 18px;
 }
@@ -62,7 +62,7 @@ li {
 }
 
 .orbit-bullets {
-	display: none;
+	display: none !important;
 }
 
 li:last-child {
