--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,11 @@ body {
 	line-height: 18px;
 }
 
+a:hover {
+	background-color: #000;
+	color: #8cc63f;
+}
+
 #search_row {
 	height: 64px;
 	background: white;
@@ -88,6 +93,8 @@ li:last-child {
 	color: white;
 	margin: 0px 14px;
 	padding: 1px 8px;
+	font-family: 'Open Sans', helvetica, sans-serif;
+	font-weight: bold;
 }
 
 .event_body, .news_body, .service_body {
@@ -99,6 +106,7 @@ li:last-child {
 	font-size: 1.4em;
 	padding: 8px;
 	padding-bottom: 0px;
+	font-family: 'Open Sans', helvetica, sans-serif;
 }
 
 .alert-box {
@@ -131,5 +139,44 @@ li:last-child {
 #more_events_btn {
 	cursor: pointer; 
 	cursor: hand;
+	font-family:'Open Sans', helvetica, sans-serif;
 }
 
+.geolocation_banner.row {
+	background: #676767;
+	margin: 0px 0px;
+	padding: 10px 0px;
+}
+
+#nearest_branch_name {
+	font-size: 1.3rem;
+	color: white;
+	text-transform: uppercase;
+}
+
+#nearest_branch_phone {
+	color: #d3d3d3;
+}
+
+#nearest_branch_hours {
+	color: #d3d3d3;
+}
+
+.event_body {
+	font-family: 'Open Sans', helvetica, sans-serif;
+}
+
+.orbit-container .orbit-slides-container>* .orbit-caption {
+	font-family: 'Open Sans', helvetica, sans-serif;
+	position: absolute;
+	bottom: 0;
+	background-color: rgba(51,51,51,0.8);
+	color: #fff;
+	width: 100%;
+	padding: 0.625rem 0.875rem;
+	font-size: 0.875rem;
+}
+
+.service_body {
+	font-family: 'Open Sans', helvetica, sans-serif;
+}
