popups for services instead of new pages"

--- a/app/views/home/_services.html.erb
+++ b/app/views/home/_services.html.erb
@@ -4,15 +4,26 @@
 <div class="home_section" id="home_services">
 	<ul>
 		<li>
-			<a href="/services/1">
+			<a href="#" data-reveal-id="hype-service-modal">
 				<div class="service_title">Hype Teen Center</div>
 				<div class="service_body">
 					Welcome to HYPE, the Detroit Public Library's Teen Center.
 				</div>
 			</a>
+			<div id="hype-service-modal" class="reveal-modal" data-reveal>
+				<p>
+				  <b class="modal-name-label">Name:</b>
+				  <div class="modal-name" id="hype-modal-name"></div>
+				</p>
+				<p>
+					<b class="modal-desc-label">Desc:</b>
+					<div class="modal-desc" id="hype-modal-desc"></div>
+				</p>
+				<a class="close-reveal-modal">&#215;</a>
+			</div>
 		</li>
 		<li>
-			<a href="/services/2">
+			<a href="#" data-reveal-id="librarian-service-modal">
 				<div class="service_title">Ask A Librarian</div>
 				<div class="service_body">
 					Brief, factual answers to your reference questions via e-mail, chat or by phone.
@@ -20,20 +31,58 @@
 			</a>
 		</li>
 		<li>
-			<a href="/services/3">
+			<div id="librarian-service-modal" class="reveal-modal" data-reveal>
+				<p>
+				  <b class="modal-name-label">Name:</b>
+				  <div class="modal-name" id="librarian-modal-name"></div>
+				</p>
+				<p>
+					<b class="modal-desc-label">Desc:</b>
+					<div class="modal-desc" id="librarian-modal-desc"></div>
+				</p>
+				<a class="close-reveal-modal">&#215;</a>
+			</div>
+		</li>
+		<li>
+			<a href="#" data-reveal-id="read-service-modal">
 				<div class="service_title">Detroit Reads!</div>
 				<div class="service_body">
-					Learn to read or improve your reading skills.
+					Learn to read or improve your reading skills. 
 				</div>
 			</a>
 		</li>
 		<li>
-			<a href="/services/4">	
+			<div id="read-service-modal" class="reveal-modal" data-reveal>
+				<p>
+				  <b class="modal-name-label">Name:</b>
+				  <div class="modal-name" id="read-modal-name"></div>
+				</p>
+				<p>
+					<b class="modal-desc-label">Desc:</b>
+					<div class="modal-desc" id="read-modal-desc"></div>
+				</p>
+				<a class="close-reveal-modal">&#215;</a>
+			</div>
+		</li>
+		<li>
+			<a href="#" data-reveal-id="career-service-modal">	
 				<div class="service_title">Career and Employment Assistance</div>
 				<div class="service_body">
 					Resources for making career decisions, strategizing your job search, and finding job listings at the Main Library.
 				</div>
 			</a>
+		</li>
+			<div id="career-service-modal" class="reveal-modal" data-reveal>
+				<p>
+					<b class="modal-name-label">Name:</b>
+					<div class="modal-name" id="career-modal-name"></div>
+				</p>
+				<p>
+					<b class="modal-desc-label">Desc:</b>
+					<div class="modal-desc" id="career-modal-desc"></div>
+				</p>
+				<a class="close-reveal-modal">&#215;</a>
+			</div>
 		</li>
 	</ul>
 </div>
