--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 		<input type="text" id="search_input" />
 	</div>
 	<div class="medium-2 columns" id="social_icons">
-		<a href="https://twitter.com/detroitlibrary"><%= image_tag 'social_gplus' %></a>
+		<a href="https://twitter.com/detroitlibrary"><%= image_tag 'social_gplus.png' %></a>
 		<a href="https://www.facebook.com/detroitpubliclibrary"><%= image_tag 'social_fb.png' %></a>
 		<a href="https://www.youtube.com/user/detroitpubliclibrary"><%= image_tag 'social_yt.png' %></a>
 		<a href="www.detroitpubliclibrary.org/overdrive"><%= image_tag 'social_od.png' %></a>
