--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,33 @@
   </head>
 
   <body>
-	<div id="wrapper">
-    	<%= yield %>
+	<div id="wrapper">		
+		<div class="off-canvas-wrap" data-offcanvas>
+		  <div class="inner-wrap">
+		    <nav class="tab-bar">
+		      <section class="left-small">
+		        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+		      </section>
+
+		      <section class="middle tab-bar-section">
+		      </section>
+		    </nav>
+
+		    <aside class="left-off-canvas-menu">
+		      <ul class="off-canvas-list">
+		        <li><label>Foundation</label></li>
+		        <li><a href="#">The Psychohistorians</a></li>
+		        <li><a href="#">...</a></li>
+		      </ul>
+		    </aside>
+
+		    <section class="main-section">
+		      	<%= yield %>
+		    </section>
+		  <a class="exit-off-canvas"></a>
+		  </div>
+		</div>	
+				
 	</div>
     <%= javascript_include_tag "application" %>
   </body>
