--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,11 @@
 
 		    <aside class="left-off-canvas-menu">
 		      <ul class="off-canvas-list">
-		        <li><label>Foundation</label></li>
-		        <li><a href="#">The Psychohistorians</a></li>
-		        <li><a href="#">...</a></li>
+		        <li><label>Content</label></li>
+		        <li><a href="#events_section">Upcoming Events</a></li>
+		        <li><a href="#news_section">News & Highlights</a></li>
+		        <li><a href="#books_section">Popular Books</a></li>
+		        <li><a href="#sevices_section">Services</a></li>
 		      </ul>
 		    </aside>
 
