--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,13 +28,13 @@
 
 	<div class="row" id="content_row">
 		<div class="medium-8 columns">
-			<a name="events_section"><%= render :partial => 'upcoming_events' %></a>
-			<a name="news_section"><%= render :partial => 'news' %></a>
+			<a name="events_section"></a><%= render :partial => 'upcoming_events' %>
+			<a name="news_section"></a><%= render :partial => 'news' %>
 		</div>
 
 		<div class="medium-4 columns">
-			<a name="books_section"><%= render :partial=>'books_games' %></a>
-			<a name="services_section"><%= render :partial=>'services' %></a>
+			<a name="books_section"></a><%= render :partial=>'books_games' %>
+			<a name="services_section"></a><%= render :partial=>'services' %>
 		</div>
 	</div>
 </div>
