--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
 
 		<div class="medium-4 columns">
 			<a name="books_section"></a><%= render :partial=>'books_games' %>
-			<a name="services_section"></a><%= render :partial=>'services' %>
+			<a name="sevices_section"></a><%= render :partial=>'services' %>
 		</div>
 	</div>
 </div>
