--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	<div id="wrapper">		
 		<div class="off-canvas-wrap" data-offcanvas>
 		  <div class="inner-wrap">
-		    <nav class="tab-bar hide-for-medium">
+		    <nav class="tab-bar show-for-small-only">
 		      <section class="left-small">
 		        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 		      </section>
