adding the cheep cheeps

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,6 +35,7 @@
 		<div class="medium-4 columns">
 			<a name="books_section"></a><%= render :partial=>'books_games' %>
 			<a name="sevices_section"></a><%= render :partial=>'services' %>
+			<a name="twitter_hose"></a><%= render :partial=>'twitterWidget' %>
 		</div>
 	</div>
 </div>
