--- a/app/views/home/_upcoming_events.html.erb
+++ b/app/views/home/_upcoming_events.html.erb
@@ -14,7 +14,7 @@
 						    				<div id="nearest_branch_hours"></div>
 												<div id="nearest_branch_phone"></div>
 											</a>
-						    	<div id="panel1" class="content active">
+						    	<div id="panel1" class="content">
 						    		<b>Other Branches</b>
 										<ul>
 						    			<li><a href="#">Bowen</a></li>
